whould work now

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>Hi</h1>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" href="/favicon.ico"><title>Leaves</title><link href="/static/css/main.a894a8b2.css" rel="stylesheet"></head><body><div id="root"></div><script type="text/javascript" src="/static/js/main.116c51ba.js"></script></body></html>
